<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewContact">

    <EditText
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/new_name"
        android:textColorHint="@color/red_100"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/red_500"
        android:paddingVertical="10sp"
        android:layout_marginTop="25dp"
        />
    <EditText
        android:id="@+id/txtCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/new_city"
        android:textColorHint="@color/red_100"
        android:textSize="24sp"
        android:textColor="@color/red_500"
        android:textStyle="bold"
        android:paddingVertical="10sp"
        />
    <EditText
        android:id="@+id/txtProfession"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/new_profession"
        android:textColorHint="@color/red_100"
        android:textColor="@color/red_500"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingVertical="10sp"
        />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/new_phone"
        android:textColorHint="@color/red_100"
        android:textSize="24sp"
        android:textColor="@color/red_500"
        android:textStyle="bold"
        android:paddingVertical="10sp"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/new_email"
        android:textColorHint="@color/red_100"
        android:textSize="24sp"
        android:textColor="@color/red_500"
        android:textStyle="bold"
        android:paddingVertical="10sp"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_save"
        android:textSize="16dp"
        android:textStyle="bold"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/red_500"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_button"
        android:text="@string/btn_back"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16dp"
        android:backgroundTint="@color/black"
        />
</LinearLayout>