<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red_500"
        android:paddingBottom="10dp"
        android:layout_marginBottom="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="vertical">



                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="12dp"
                    android:textAlignment="textStart">

                    <ImageView
                        android:id="@+id/iconoImageView"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerVertical="true"
                        android:outlineAmbientShadowColor="@color/white"
                        android:outlineSpotShadowColor="@color/white"
                        android:paddingLeft="1dp"
                        android:paddingRight="1dp"
                        android:src="@drawable/outline_account_circle_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:text="Nombre: "
                        android:textColor="@color/black"
                        android:textSize="26dp"
                        android:textStyle="bold">
                    </TextView>
                    <TextView
                        android:id="@+id/nameUnique"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nombreContacto"
                        android:textColor="@color/black"
                        android:textSize="22dp">
                    </TextView>

                </LinearLayout>



                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="6dp"
                    android:textAlignment="textStart">
                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerVertical="true"
                        android:outlineAmbientShadowColor="@color/white"
                        android:outlineSpotShadowColor="@color/white"
                        android:paddingLeft="1dp"
                        android:paddingRight="1dp"
                        android:src="@drawable/outline_home_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="Ciudad: "
                        android:textColor="@color/black"
                        android:textSize="22dp"
                        android:paddingStart="8dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/ciudadUnique"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/ciudadContacto"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:paddingStart="8dp"
                        >
                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="6dp"
                    android:textAlignment="textStart">
                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerVertical="true"
                        android:outlineAmbientShadowColor="@color/white"
                        android:outlineSpotShadowColor="@color/white"
                        android:paddingLeft="1dp"
                        android:paddingRight="1dp"
                        android:src="@drawable/outline_favorite_border_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="Profesión: "
                        android:textColor="@color/black"
                        android:textSize="22dp"
                        android:paddingStart="8dp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/profesionUnique"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/profesionContacto"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:paddingStart="8dp"
                        >
                    </TextView>


            </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="6dp">
                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerVertical="true"
                        android:outlineAmbientShadowColor="@color/white"
                        android:outlineSpotShadowColor="@color/white"
                        android:paddingLeft="1dp"
                        android:paddingRight="1dp"
                        android:src="@drawable/outline_settings_phone_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="Ciudad: "
                        android:textColor="@color/black"
                        android:textSize="22dp"
                        android:paddingStart="8dp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/telefonoUnique"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/telefonoContacto"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:paddingStart="8dp"
                        android:layout_marginTop="4dp">
                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="6dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerVertical="true"
                        android:outlineAmbientShadowColor="@color/white"
                        android:outlineSpotShadowColor="@color/white"
                        android:paddingLeft="1dp"
                        android:paddingRight="1dp"
                        android:src="@drawable/outline_mark_email_read_20" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="Email: "
                        android:textColor="@color/black"
                        android:textSize="22dp"
                        android:paddingStart="8dp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/emailUnique"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/emailContacto"
                        android:textColor="@color/black"
                        android:textSize="18dp"
                        android:paddingStart="8dp"
                        android:layout_marginTop="4dp">
                    </TextView>
                </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/btnBackUnique"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_button"
        android:text="@string/btn_back"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16dp"
        android:backgroundTint="@color/black"
        />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_delete"
        android:textSize="16dp"
        android:textStyle="bold"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/ligth"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        />


</LinearLayout>